--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,4 +13,4 @@
         - uses: actions/checkout@v3
         - run: |
             echo "Checking out code"
-            ${ { secrets.GITHUB_TOKEN } }
+            ${{ secrets }}
