--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,7 +5,8 @@ on:
     branches: [master, main]
 jobs:
   Explore-GitHub-Actions:
-    runs-on:
+    runs-on: ${{ matrix.os }}
+    strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
